submit burger button adds new burger to database, and to list of burgers to be devoured

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,6 @@
 
 {{!-- Burgers that have not been devoured --}}
 
-<button id='test'></button>
-
 <div class='not-devoured'>
     <h4>Burgers to be devoured</h4>
     <ul>
@@ -36,6 +34,6 @@
 <form>
     <textarea id='new-burger'></textarea>
     <br>
-    <button type='submit' id='submit-burger'>Submit</button>
+    <button id='submit-burger'>Submit</button>
     <p>Enter a burger you would like to eat and click the Submit button!</p>
 </form>
