changed id of devour button to class

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
             {{#unless devoured}}
                 <li>
                     {{ id }}. {{ burger_name }}
-                    <button id='devour' data-id='{{ id }}'>Devour it!</button>
+                    <button class='devour' data-id='{{ id }}'>Devour it!</button>
                 </li>
             {{/unless}}
         {{/each }}
